5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1812_2582.log
== TEST (2019-06-05 00:37:05) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l+(((x**d)/factorial(d)))
	d=d+2
	t=
	j=j+1
print(round(l,11))	
-- ERROR:
File "XXXX", line 11
    t=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:37:13) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l+(((x**d)/factorial(d)))
	d=d+2
	j=j+1
print(round(l,11))	
-- OUTPUT:
3.7619047619
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:37:28) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l+(((x**d)/factorial(d)))
	d=d+2
	j=j+1
print(round(l,8))	
-- OUTPUT:
3.76190476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 00:37:34) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l+(((x**d)/factorial(d)))
	d=d+2
	j=j+1
print(round(l,8))	
-- EXECUTION TIME:
0.722877
-- TEST CASE 1:
---- input:
2
5
---- correct output:
3.76190476
---- user output:
3.76190476
-- TEST CASE 2:
---- input:
10
2
---- correct output:
51.0
---- user output:
51.0
-- TEST CASE 3:
---- input:
12
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 23:07:15) 
-- CODE:
from math import*
x=eval(input("Digite um numero: "))
y=int(input("Digite os termos: "))
d=2
t=1
l=1
j=1
while(y>j):
	l=l+(((x**d)/factorial(d)))
	d=d+2
	j=j+1
print(round(l,8))	
-- EXECUTION TIME:
0.727729
-- TEST CASE 1:
---- input:
2
5
---- correct output:
3.76190476
---- user output:
3.76190476
-- TEST CASE 2:
---- input:
10
2
---- correct output:
51.0
---- user output:
51.0
-- TEST CASE 3:
---- input:
12
35
---- correct output:
81377.39571257
---- user output:
81377.39571257
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
